...
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:weightSum="3">

        <Button
            android:id="@+id/btn_provide_activity"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:backgroundTint="@android:color/holo_green_dark"
            android:text="@string/provide_btn_text"
            android:textColor="@android:color/white" />
...
