<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    >

    <TextView
        android:text="@string/Remaining_time"
        android:layout_width="match_parent"
        android:layout_height="405dp"
        android:id="@+id/remaining_time_id"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="90dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/btnStopALarm"
        android:text="Stop Alarm"
        android:textSize="30dp"
        android:layout_weight="0.1"
        android:background="@android:color/holo_green_light"
        android:textColor="@android:color/white"
        android:textAppearance="?android:attr/textAppearanceLarge"/> 

</LinearLayout>



